# rtimelog

./: Cargo.toml
src/: cli.rs  main.rs  parser.rs
src/cli/: arguments.rs
