[package]
name = "rtimelog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
tui = "0.19"
crossterm = "0.25"
clap = {version = "4.4.7", features=["derive"]}
colored = "2.0.4"
home = "0.5.5"
confy = "0.5.1"
serde = "1.0.190"
serde_derive = "1.0.190"
humantime = "2.1.0"